k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: order-service-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: fluid.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: order-service

                port:
                  number: 80
